# KinderCare

./: .gitignore  .replit  ai_assistant.py  app.py  database.py  email_service.py  layout.py  notifications.py  pyproject.toml  replit.md  requirements.txt  streamlit_app.py  user_database.db  user_database.py  vaccination_guidelines.py  vaccination_health.db
.local/state/replit/agent/filesystem/: filesystem_state.json
assets/: styles.css
attached_assets/: Pasted-import-streamlit-as-st-from-datetime-import-date-dateti_1766272848420.txt
data/: user_database.db
pages/: about_us.py  ai_assistant.py  assistant.py  dashboard.py  diseases_remedies.py  health_timeline.py  home.py  login.py  settings.py  signup.py  vaccination_schedule.py  vaccination_timeline.py
