[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymongo>=4.15.5",
    "python-dateutil>=2.9.0.post0",
    "sendgrid>=6.12.5",
    "streamlit>=1.52.1",
]
